--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@ body{
 	font: 18px/1.5 Helvetica, Arial, sans-serif; 
 }	
 
+.boldface{
+	font-weight: bolder;
+}
+
+.feed{
+	border: 2px solid #CCCCCC;
+}
+
 .hiddenimg{
 	color: blue;
 	font-family: Century Gothic, sans-serif;
