--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,13 @@ input#tq{
 	display: none;
 	position: relative;
 }
+
+#tq:checked ~ .hiddenimg{
+	display: block;
+	visibility: visible;
+	opacity: 1;
+
+input#tq{
+	display: none;
+	position: relative;
+}
