--- a/css/style.css
+++ b/css/style.css
@@ -143,12 +143,13 @@ input#tq{
 	position: relative;
 }
 
-#tq:checked ~ .hiddenimg{
+#tr:checked ~ .hiddenimg{
 	display: block;
 	visibility: visible;
 	opacity: 1;
+}
 
-input#tq{
+input#tr{
 	display: none;
 	position: relative;
 }
